# Vibe-Syndicate

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  _list_transcripts.ps1  fly.toml  render.yaml  skills-lock.json  start-swarm.bat  vercel.json
.cursor/: mcp.json
deploy/: README.md
docs/: ARCHITECTURE.md  BAND-SDK-REFERENCE.md  DEMO_SCRIPT.md  FEATHERLESS-AI-REFERENCE.md  HACKATHON-BRIEF.md  KICKOFF-STREAM-NOTES.md  NETWORK-INTEGRATION-INSIGHTS.md  SUBMISSION.md  (+2 more)
syndicate-agent/: .env.example  README.md  conftest.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh
syndicate-agent/migrations/: 002_task_metrics.sql  003_pgvector.sql  004_approvals.sql
syndicate-agent/src/syndicate_agent/: __init__.py  bridge.py  config.py  main.py  memory.py  metrics.py  orchestrator.py  self_improve.py  test_band_connection.py  tool_discovery.py  types.py
syndicate-agent/src/syndicate_agent/prompts/: architect.md  engineer.md  nexus.md  qa.md  researcher.md  reviewer.md
syndicate-agent/tests/: test_p1_foundation.py
syndicate-api/: .env.example  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
syndicate-api/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_realtime.sql  004_fix_reviewer_model.sql
syndicate-api/src/syndicate_api/: __init__.py  config.py  db.py  main.py  models.py
syndicate-api/src/syndicate_api/api/: __init__.py  agents.py  events.py  health.py  memory.py  metrics.py  rooms.py  tasks.py
syndicate-api/src/syndicate_api/middleware/: __init__.py  auth.py
(+110 files in other folders)
