[project]
name = "syndicate-agent"
version = "0.1.0"
description = "Syndicate — multi-agent developer orchestration brain"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "band-sdk[langgraph]>=0.1",
    "google-genai>=1.0",
    "openai>=1.0",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syndicate_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
